fix mobile menu alignment issue

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -87,10 +87,12 @@
     }
 
     .nav-menu {
-        display: flex;
-        flex-direction: column;
+        /* display: flex;
+        flex-direction: column; */
+        display: inline-block;
+        vertical-align: top;
         width: 100%;
-        height: 90vh;
+        height: 91vh;
         position: absolute;
         top: 80px;
         left: -100%;
@@ -99,6 +101,9 @@
     }
 
     .nav-menu.active {
+        /* align-items: flex-start; */
+        display: inline-block;
+        vertical-align: top;
         background: #242222;
         left: 0;
         opacity: 1;
@@ -120,7 +125,6 @@
     }
 
     .navbar-logo {
-        /* margin-top: -25px; */
         position: absolute;
         top: 0;
         left: 0;
